# Paral

./: .gitignore  CMakeLists.txt  README.md  clear.sh
MPI/lab_1/: CMakeLists.txt
MPI/lab_1/src/: main.cpp
MPI/lab_2/: CMakeLists.txt
MPI/lab_2/src/: main.cpp
MPI/lab_3/: CMakeLists.txt
MPI/lab_3/src/: main.cpp
OpenMP/lab_1/: CMakeLists.txt
OpenMP/lab_1/src/: main.cpp
OpenMP/lab_2/: CMakeLists.txt
OpenMP/lab_2/src/: main.cpp
